--- a/app/src/main/res/layout/secondary_action.xml
+++ b/app/src/main/res/layout/secondary_action.xml
@@ -18,6 +18,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_gravity="center"
+        app:tint="?attr/colorAccent"
         tools:ignore="ContentDescription"
         tools:src="@sample/secondaryaction" />
 
@@ -26,6 +27,6 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        app:foregroundColor="?attr/action_icon_color" />
+        app:foregroundColor="?attr/colorAccent" />
 
 </FrameLayout>
